force-app/main/default/objects/Onboarding__c/fields/Days_Since_Initial_Billing_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Initial_Billing_Call_Complete__c</fullName>
    <description>Calculates days since Billing Call or Webinar Date IF Billing Call or Webinar Status = Complete. If Status ≠ Complete, Days Since will be null.</description>
    <formula>IF(
   ISPICKVAL(Billing_Call_or_Webinar_Status__c, &apos;Complete&apos;),
   TODAY()- Billing_Call_or_Webinar_Date__c, NULL)</formula>
    <inlineHelpText>Calculates days since Billing Call or Webinar Date IF Billing Call or Webinar Status = Complete. If Status ≠ Complete, Days Since will be null.</inlineHelpText>
    <label>Days Since Initial Billing Call Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>