force-app/main/default/objects/Onboarding__c/fields/Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activation__c</fullName>
    <description>Days to Activation from school object associated to the account.</description>
    <formula>IF(
 RecordType.DeveloperName = &quot;Billing&quot;,
 Account__r.School_Object__r.Days_to_Billing_Activation_New__c ,
 Account__r.School_Object__r.Days_to_SaaS_Activation_New__c 

)</formula>
    <inlineHelpText>The number of days it took the school from closed won to activate.</inlineHelpText>
    <label>Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>