force-app/main/default/objects/Onboarding__c/fields/Days_to_Activity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activity_Threshold__c</fullName>
    <description>Days to Activity Threshold from the school object associated to the account</description>
    <formula>Account__r.School_Object__r.Days_to_Activity_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days for the Activity Threshold to be met.</inlineHelpText>
    <label>Days to Activity Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>