force-app/main/default/objects/Onboarding__c/fields/Days_to_Setup_Charges_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Setup_Charges_Threshold__c</fullName>
    <formula>Account__r.School_Object__r.Days_to_Setup_Charges_Threshold__c</formula>
    <label>Days to Setup Charges Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>