force-app/main/default/objects/Onboarding__c/fields/Declined_Billing_Training__c.field-meta.xml
<CustomField>
    <fullName>Declined_Billing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from SaaS onboarding to Billing onboarding upon creation. Editable on both record types. For billing team tracking.</description>
    <inlineHelpText>Did the customer decline a billing training?</inlineHelpText>
    <label>Declined Billing Training</label>
    <type>Checkbox</type>
</CustomField>