force-app/main/default/objects/Onboarding__c/fields/Device_Setup__c.field-meta.xml
<CustomField>
    <fullName>Device_Setup__c</fullName>
    <label>Device Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Device_Setup</valueSetName>
    </valueSet>
</CustomField>