force-app/main/default/objects/Onboarding__c/fields/Device_Status__c.field-meta.xml
<CustomField>
    <fullName>Device_Status__c</fullName>
    <label>Device Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Device_Status</valueSetName>
    </valueSet>
</CustomField>