force-app/main/default/objects/Onboarding__c/fields/Dollars_Processed_Online__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Processed_Online__c</fullName>
    <description>Amount of dollars processed online.</description>
    <formula>Account__r.School_Object__r.Dollars_Processed_Online__c</formula>
    <inlineHelpText>Amount of dollars processed online.</inlineHelpText>
    <label>Dollars Processed Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>