force-app/main/default/objects/Onboarding__c/fields/EC_Customer_Path__c.field-meta.xml
<CustomField>
    <fullName>EC_Customer_Path__c</fullName>
    <label>EC Customer Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EC_Customer_Path</valueSetName>
    </valueSet>
</CustomField>