force-app/main/default/objects/Onboarding__c/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <description>Captured by Sales on closed-won opp</description>
    <inlineHelpText>When their first brightwheel payment is expected to be submitted.</inlineHelpText>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>