force-app/main/default/objects/Onboarding__c/fields/First_Billing_Plan_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Billing_Plan_Set_Up_Date__c</fullName>
    <description>Date the first billing plan was set up.</description>
    <formula>Account__r.School_Object__r.First_Billing_Plan_Set_Up_Date__c</formula>
    <inlineHelpText>Date the first billing plan was set up.</inlineHelpText>
    <label>First Billing Plan Set Up Date</label>
    <type>Date</type>
</CustomField>