force-app/main/default/objects/Onboarding__c/fields/First_Lesson_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Lesson_Start_Date__c</fullName>
    <description>Manually populated by EC OBS</description>
    <label>First Lesson Start Date</label>
    <type>Date</type>
</CustomField>