force-app/main/default/objects/Onboarding__c/fields/FTS_Owner__c.field-meta.xml
<CustomField>
    <fullName>FTS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FTS owner assigned by OBS</description>
    <inlineHelpText>FTS owner assigned by OBS when meeting is set</inlineHelpText>
    <label>FTS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>