force-app/main/default/objects/Onboarding__c/fields/Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage__c</fullName>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_funnel_stages</valueSetName>
    </valueSet>
</CustomField>