force-app/main/default/objects/Onboarding__c/fields/Funnel_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage_Changed__c</fullName>
    <description>Date the Funnel Stage was last changed - used in process builder to date stamp when field is changed and used in formula to count number of days in stage.</description>
    <inlineHelpText>Date the Funnel Stage was last changed.</inlineHelpText>
    <label>Funnel Stage Changed</label>
    <type>Date</type>
</CustomField>