force-app/main/default/objects/Onboarding__c/fields/Goals_and_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Goals_and_Priorities__c</fullName>
    <label>Goals and Priorities</label>
    <type>TextArea</type>
</CustomField>