force-app/main/default/objects/Onboarding__c/fields/Government_Contract__c.field-meta.xml
<CustomField>
    <fullName>Government_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This attribute will get set on creation of an Onboarding record when created via the Government Licensee process. When set upon creation, it will be routed to the correct onboarding coordinator.</description>
    <inlineHelpText>This attribute will get set on creation of an Onboarding record when created via the Government Licensee process. When set upon creation, it will be routed to the correct onboarding coordinator.</inlineHelpText>
    <label>Government Contract</label>
    <type>Checkbox</type>
</CustomField>