force-app/main/default/objects/Onboarding__c/fields/Increase_Parent_Adoption_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Increase_Parent_Adoption_Threshold_Stamp__c</fullName>
    <label>Increase Parent Adoption Threshold Stamp</label>
    <type>Date</type>
</CustomField>