force-app/main/default/objects/Onboarding__c/fields/Initial_Customer_Mindset__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Mindset__c</fullName>
    <description>Referencing global picklist set.</description>
    <inlineHelpText>The customer&apos;s initial buying mindset on the first call with them.</inlineHelpText>
    <label>Initial Customer Mindset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Initial_Customer_Mindset</valueSetName>
    </valueSet>
</CustomField>