force-app/main/default/objects/Onboarding__c/fields/Initial_Setup_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Completed__c</fullName>
    <description>Max value from the Onboarding Setup Call fields from contact or account.</description>
    <formula>IF(
    AND(
       NOT(ISBLANK(Account__r.Initial_Setup_Call_Completed__c)),
       ISBLANK(Primary_Contact__r.Initial_Setup_Call_Completed__c)
    ),
    Account__r.Initial_Setup_Call_Completed__c,
    IF(
        AND(
            ISBLANK(Account__r.Initial_Setup_Call_Completed__c),
            NOT(ISBLANK(Primary_Contact__r.Initial_Setup_Call_Completed__c))
        ),
        Primary_Contact__r.Initial_Setup_Call_Completed__c,
        IF(
            Account__r.Initial_Setup_Call_Completed__c &gt; Primary_Contact__r.Initial_Setup_Call_Completed__c,
            Account__r.Initial_Setup_Call_Completed__c,
            Primary_Contact__r.Initial_Setup_Call_Completed__c
        )
    )
)</formula>
    <label>Initial Setup Call Completed</label>
    <type>Date</type>
</CustomField>