force-app/main/default/objects/Onboarding__c/fields/Initial_Setup_Call_Completed_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Completed_Stamp__c</fullName>
    <description>Updated in Stamp SaaS flow when school object thresholds are met.</description>
    <label>Initial Setup Call Completed Stamp</label>
    <type>Date</type>
</CustomField>