force-app/main/default/objects/Onboarding__c/fields/Initial_Setup_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Scheduled__c</fullName>
    <description>Max date of Initial Setup Call Scheduled from either contact or account</description>
    <formula>IF(
    AND(
       NOT(ISBLANK(Account__r.Initial_Setup_Call_Scheduled__c)),
       ISBLANK(Primary_Contact__r.Initial_Setup_Call_Scheduled__c)
    ),
    Account__r.Initial_Setup_Call_Scheduled__c,
    IF(
        AND(
            ISBLANK(Account__r.Initial_Setup_Call_Scheduled__c),
            NOT(ISBLANK(Primary_Contact__r.Initial_Setup_Call_Scheduled__c))
        ),
        Primary_Contact__r.Initial_Setup_Call_Scheduled__c,
        IF(
            Account__r.Initial_Setup_Call_Scheduled__c &gt; Primary_Contact__r.Initial_Setup_Call_Scheduled__c,
            Account__r.Initial_Setup_Call_Scheduled__c,
            Primary_Contact__r.Initial_Setup_Call_Scheduled__c
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Setup Call Scheduled</label>
    <type>Date</type>
</CustomField>