force-app/main/default/objects/Onboarding__c/fields/Initial_Students_Threshold_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Initial_Students_Threshold_Met_Stamp__c</fullName>
    <label>Initial Students Threshold Met Stamp</label>
    <type>Date</type>
</CustomField>