force-app/main/default/objects/Onboarding__c/fields/Initiate_Parents_Signups_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Parents_Signups_Threshold_Stamp__c</fullName>
    <label>Initiate Parents Signups Threshold Stamp</label>
    <type>Date</type>
</CustomField>