force-app/main/default/objects/Onboarding__c/fields/Last_Statement_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Send_Date__c</fullName>
    <description>When the last statement was sent. Used in risk management for billing churn.</description>
    <formula>Account__r.School_Object__r.Last_Statement_Send_Date__c</formula>
    <inlineHelpText>When the last statement was sent. Used in risk management for billing churn.</inlineHelpText>
    <label>Last Statement Send Date</label>
    <type>Date</type>
</CustomField>