force-app/main/default/objects/Onboarding__c/fields/Latest_Onboarding_Step_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Latest_Onboarding_Step_Completed_At__c</fullName>
    <description>The date/time that the latest onboarding progress step was completed - from the school object.</description>
    <formula>Account__r.School_Object__r.Latest_Onboarding_Step_Completed_At__c</formula>
    <inlineHelpText>The date/time that the latest onboarding progress step was completed - from production.</inlineHelpText>
    <label>Latest Onboarding Step Completed At</label>
    <type>DateTime</type>
</CustomField>