force-app/main/default/objects/Onboarding__c/fields/Location_of_Check_Ins__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Check_Ins__c</fullName>
    <label>Location of Check-Ins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_of_Check_Ins</valueSetName>
    </valueSet>
</CustomField>