force-app/main/default/objects/Onboarding__c/fields/Log_First_Activity_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Log_First_Activity_Threshold_Stamp__c</fullName>
    <label>Log First Activity Threshold Stamp</label>
    <type>Date</type>
</CustomField>