force-app/main/default/objects/Onboarding__c/fields/Log_More_Activities_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Log_More_Activities_Threshold_Stamp__c</fullName>
    <label>Log More Activities Threshold Stamp</label>
    <type>Date</type>
</CustomField>