force-app/main/default/objects/Onboarding__c/fields/LOGIC_Open_Passback_task__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Open_Passback_task__c</fullName>
    <description>Populated by rollup helper</description>
    <label>LOGIC Open Passback task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>