force-app/main/default/objects/Onboarding__c/fields/LOGIC_SaaS_onboarding__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_SaaS_onboarding__c</fullName>
    <description>Logic for onboarding funnel flows</description>
    <formula>OR( 
   RecordTypeId = &apos;0121I000000OGlu&apos;,
   RecordTypeId = &apos;0121I000000OGlw&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOGIC SaaS onboarding</label>
    <type>Checkbox</type>
</CustomField>