force-app/main/default/objects/Onboarding__c/fields/Multi_Site__c.field-meta.xml
<CustomField>
    <fullName>Multi_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captured by sales on closed-won Opp.</description>
    <inlineHelpText>Is the center a multi-site?</inlineHelpText>
    <label>Multi-Site</label>
    <type>Checkbox</type>
</CustomField>