force-app/main/default/objects/Onboarding__c/fields/Multi_Site_Info__c.field-meta.xml
<CustomField>
    <fullName>Multi_Site_Info__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>Information regarding the multi-site.</inlineHelpText>
    <label>Multi-Site Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>