force-app/main/default/objects/Onboarding__c/fields/Names_and_Roles_of_Implementers__c.field-meta.xml
<CustomField>
    <fullName>Names_and_Roles_of_Implementers__c</fullName>
    <description>Captured by sales when closed-won.</description>
    <inlineHelpText>Who will be implementing brightwheel? Please list a minimum of two contacts.</inlineHelpText>
    <label>Names and Roles of Implementers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>