force-app/main/default/objects/Onboarding__c/fields/NEW_Billing_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>NEW_Billing_Activation_Funnel_Stage__c</fullName>
    <label>NEW Billing Activation Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NEW_Billing_Activation_Funnel_Stage</valueSetName>
    </valueSet>
</CustomField>