force-app/main/default/objects/Onboarding__c/fields/New_Billing_OB_School_In_Sync__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_OB_School_In_Sync__c</fullName>
    <description>This formula checks if the onboarding was created before 06/26/2024, if the related payer customer type is &quot;Government Payer,&quot; or if the account customer type is &quot;Multi-Site Child.&quot; If any of these are true, it displays &quot;Outside Sync Need Population,&quot; indicating the onboarding and school object shouldn&apos;t match due to other specific scenarios. Otherwise, it compares specific new Billing-related date fields and returns True if both fields are null or if the date difference is one day or less, and False otherwise.</description>
    <formula>IF(
OR(
DATEVALUE(CreatedDate) &lt; DATE(2024, 6, 26),
Account__r.Related_Payer_Customer_Type__c = &quot;Government Payer&quot;,
TEXT( Account__r.Customer_Type__c ) = &quot;Multi-Site Child&quot;
),
&quot;Outside Sync Need Population&quot;,
IF(
AND(
OR(
AND(
ISBLANK(Billing_Adding_Students_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Adding_Students_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Adding_Students_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Adding_Students_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Setting_Up_Bills_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Setting_Up_Bills_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Setting_Up_Bills_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Setting_Up_Bills_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Submit_Verify_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Submit_Verify_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Submit_Verify_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Submit_Verify_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Complete_Set_Up_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Complete_Set_Up_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Complete_Set_Up_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Complete_Set_Up_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_FinalVerification_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_FinalVerification_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_FinalVerification_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_FinalVerification_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Adding_Payers_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Adding_Payers_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Adding_Payers_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Adding_Payers_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Sending_Bills_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Sending_Bills_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Sending_Bills_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Sending_Bills_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Online_Payments_Stage_Met_Date__c),
ISBLANK(Account__r.School_Object__r.Billing_Online_Payments_Stage_Met_Date__c)
),
ABS(DATEVALUE(Billing_Online_Payments_Stage_Met_Date__c) - DATEVALUE(Account__r.School_Object__r.Billing_Online_Payments_Stage_Met_Date__c)) &lt;= 1
),
OR(
AND(
ISBLANK(Billing_Activation_Date_Stamp__c),
ISBLANK(Account__r.School_Object__r.Billing_Activation_Date_2024__c)
),
ABS(Billing_Activation_Date_Stamp__c - DATEVALUE(Account__r.School_Object__r.Billing_Activation_Date_2024__c)) &lt;= 1
)
),
&quot;True&quot;,
&quot;False&quot;
)
)</formula>
    <inlineHelpText>Compares Billing dates between onboarding and the school object. If onboarding was created before 06/26/2024, or certain account conditions apply, it shows &quot;Outside Sync Need Population.&quot; Otherwise, it checks if dates match or differ by one day or less.</inlineHelpText>
    <label>New Billing OB/School In Sync?</label>
    <type>Text</type>
</CustomField>