force-app/main/default/objects/Onboarding__c/fields/NEW_SaaS_Activation_Funnel_Value__c.field-meta.xml
<CustomField>
    <fullName>NEW_SaaS_Activation_Funnel_Value__c</fullName>
    <label>NEW SaaS Activation Funnel Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>